Incluyo nueva accion para enviar un correo para resetear la contraseña

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,18 @@ logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
 jwt.secret=hd3#3h12D8v6s@4KnZ9L!mWvRt!A2pYx
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dferna40@gmail.com
+spring.mail.password=hppnakfhgxgkzpks
+spring.mail.from=dferna40@gmail.com
+
+
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
+
 server.port=8083
