--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -15,3 +15,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 jwt.secret=hd3#3h12D8v6s@4KnZ9L!mWvRt!A2pYx
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dferna40@gmail.com
+spring.mail.password=hppnakfhgxgkzpks
+spring.mail.from=dferna40@gmail.com
+
+
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
