Realizo correcciones para el registro y añadir tambien el id del puesto

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 jwt.secret=hd3#3h12D8v6s@4KnZ9L!mWvRt!A2pYx
+jwt.expiration=3600000
 
 
 spring.mail.host=smtp.gmail.com
