--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.web=DEBUG
 jwt.secret=hd3#3h12D8v6s@4KnZ9L!mWvRt!A2pYx
+jwt.expiration=3600000
 
 
 spring.mail.host=smtp.gmail.com
